@@ -6,5 +6,6 @@ kppInterfacedir = @includedir@/kppInterface
 kppInterface_HEADERS = \
 	kppInterface/kppInterface.h \
 	kppInterface/kppCommandSolvePlanner.h \
+	kppInterface/kppCommandStartCorbaServer.h \
 	kppInterface/kwsGraphicRoadmap.h
 
