@@ -1,5 +1,8 @@
 $Id: ChangeLog 2007/08/27 19:13:36 mallet $
-
+2007/09/21
+	1. Migrate "start corba server" command from kppInterfaceWalk to kppInterface
+	2. Added ON_IDLE notification to handle CORBA requests according to new hppCorbaServer thread policy.
+	
 2007/09/07
 	1. Correction in notification treatment: adding an obstacle is now different from inserting a new list of obstacles.
 	2. Assemblies are now supported.
